PR commit for KafkaIT